<resources>
    <string name="app_name">Grand Trek</string>

    <string name="message_enable_location">Please enable location.</string>
    <string name="message_enable_permissions">You should grant all required permissions.</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>

    <string name="menu_trip">Trip</string>
    <string name="menu_routes">Routes</string>

    <string name="status_format">Satellites: %d, Status: %s</string>
    <string name="label_average_speed">Average Speed</string>
    <string name="label_maximum_speed">Maximum Speed</string>
    <string name="label_distance">Distance</string>
    <string name="label_altitude">Altitude</string>
    <string name="label_trip_time">Trip time</string>
    <string name="label_ride_time">Ride time</string>
    <string name="label_auto_positioning">Auto positioning</string>
    <string name="label_use_offline_map">Use offline map</string>
    <string name="label_save_route">Save route</string>
    <string name="hint_route_name">Route name</string>
    <string name="stop_recording">Stop recording if you want to continue</string>
    <string name="delete_confirm">Delete route &lt;b>%s&lt;/b>?</string>
    <string name="delete_yes">Yes</string>
    <string name="delete_no">No</string>
</resources>
