<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/outPadding"
        android:text="@string/label_save_route"
        />

    <EditText
        android:id="@+id/route_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/outPadding"
        />

    <ToggleButton
        android:id="@+id/color_violet"
        android:layout_width="@dimen/colorButtonSize"
        android:layout_height="@dimen/colorButtonSize"
        app:layout_constraintTop_toBottomOf="@id/route_name"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/violet"
        android:layout_marginTop="@dimen/smallPadding"
        android:layout_marginStart="@dimen/outPadding"
        android:checked="true"
        android:tag="@color/violet"
        style="@style/colorButton"
        />
    <ToggleButton
        android:id="@+id/color_red"
        android:layout_width="@dimen/colorButtonSize"
        android:layout_height="@dimen/colorButtonSize"
        app:layout_constraintTop_toTopOf="@id/color_violet"
        app:layout_constraintStart_toEndOf="@id/color_violet"
        android:backgroundTint="@color/red"
        android:layout_marginStart="@dimen/smallPadding"
        android:tag="@color/red"
        style="@style/colorButton"
        />
    <ToggleButton
        android:id="@+id/color_orange"
        android:layout_width="@dimen/colorButtonSize"
        android:layout_height="@dimen/colorButtonSize"
        app:layout_constraintTop_toTopOf="@id/color_violet"
        app:layout_constraintStart_toEndOf="@id/color_red"
        android:backgroundTint="@color/orange"
        android:layout_marginStart="@dimen/smallPadding"
        android:tag="@color/orange"
        style="@style/colorButton"
        />
    <ToggleButton
        android:id="@+id/color_green"
        android:layout_width="@dimen/colorButtonSize"
        android:layout_height="@dimen/colorButtonSize"
        app:layout_constraintTop_toTopOf="@id/color_violet"
        app:layout_constraintStart_toEndOf="@id/color_orange"
        android:backgroundTint="@color/green"
        android:layout_marginStart="@dimen/smallPadding"
        android:tag="@color/green"
        style="@style/colorButton"
        />
    <ToggleButton
        android:id="@+id/color_blue"
        android:layout_width="@dimen/colorButtonSize"
        android:layout_height="@dimen/colorButtonSize"
        app:layout_constraintTop_toTopOf="@id/color_violet"
        app:layout_constraintStart_toEndOf="@id/color_green"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/blue"
        android:layout_marginStart="@dimen/smallPadding"
        android:layout_marginEnd="@dimen/outPadding"
        android:tag="@color/blue"
        style="@style/colorButton"
        />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/color_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save"
        style="@style/defaultButton"
        />

    <Button
        android:id="@+id/discard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/color_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save_button"
        android:text="@string/discard"
        style="@style/defaultButton"
        />
</android.support.constraint.ConstraintLayout>