<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="route" type="com.grandtrek.data.model.Route" />
    </data>

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="@dimen/outPadding"
            android:paddingLeft="@dimen/outPadding"
            android:text="@{route.name}"
            tools:text="WAT - czerwona"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="@id/name"
            android:paddingTop="@dimen/smallPadding"
            android:paddingLeft="@dimen/outPadding"
            tools:text="03-09-2018"
            android:text="@{route.dateFormatted()}"
            />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/date"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingLeft="@dimen/outPadding"
            android:paddingTop="@dimen/smallPadding"
            android:text="@{route.distanceInKm()}"
            tools:text="38.21km"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/average_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingRight="@dimen/outPadding"
            android:paddingTop="@dimen/outPadding"
            android:text="@{route.averageSpeedInKmH()}"
            tools:text="21.34km/h"
            android:textColor="@android:color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/average_speed"
            app:layout_constraintTop_toTopOf="@id/average_speed"
            app:layout_constraintBottom_toBottomOf="@id/average_speed"
            android:paddingTop="@dimen/outPadding"
            android:paddingRight="@dimen/smallPadding"
            android:text="@string/label_average_speed"
            />

        <TextView
            android:id="@+id/maximum_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/average_speed"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingRight="@dimen/outPadding"
            android:paddingTop="@dimen/smallPadding"
            android:text="@{route.maximumSpeedInKmH()}"
            tools:text="21.34km/h"
            android:textColor="@android:color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/maximum_speed"
            app:layout_constraintTop_toTopOf="@id/maximum_speed"
            app:layout_constraintBottom_toBottomOf="@id/maximum_speed"
            android:paddingTop="@dimen/smallPadding"
            android:paddingRight="@dimen/smallPadding"
            android:text="@string/label_maximum_speed"
            />

        <TextView
            android:id="@+id/trip_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/maximum_speed"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingRight="@dimen/outPadding"
            android:paddingTop="@dimen/smallPadding"
            android:text="@{route.tripTimeFormatted()}"
            tools:text="0:34:12"
            android:textColor="@android:color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/trip_time"
            app:layout_constraintTop_toTopOf="@id/trip_time"
            app:layout_constraintBottom_toBottomOf="@id/trip_time"
            android:paddingTop="@dimen/smallPadding"
            android:paddingRight="@dimen/smallPadding"
            android:text="@string/label_trip_time"
            />
        <TextView
            android:id="@+id/ride_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/trip_time"
            app:layout_constraintBottom_toTopOf="@id/speed_chart"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingRight="@dimen/outPadding"
            android:paddingTop="@dimen/smallPadding"
            android:paddingBottom="@dimen/outPadding"
            android:text="@{route.rideTimeFormatted()}"
            tools:text="0:34:12"
            android:textColor="@android:color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/ride_time"
            app:layout_constraintTop_toTopOf="@id/ride_time"
            app:layout_constraintBottom_toBottomOf="@id/ride_time"
            android:paddingTop="@dimen/smallPadding"
            android:paddingBottom="@dimen/outPadding"
            android:paddingRight="@dimen/smallPadding"
            android:text="@string/label_ride_time"
            />

        <com.grandtrek.ui.trip.views.TripChart
            android:id="@+id/speed_chart"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ride_time"
            app:layout_constraintBottom_toTopOf="@id/altitude_chart"
            />
        <com.grandtrek.ui.trip.views.TripChart
            android:id="@+id/altitude_chart"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/speed_chart"
            app:layout_constraintBottom_toTopOf="@id/map_view"
            />

        <org.osmdroid.views.MapView
            android:id="@+id/map_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/altitude_chart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </android.support.constraint.ConstraintLayout>
</layout>